Fixes IE11 images stretching

--- a/styleguide/source/assets/scss/02-molecules/hub/_hub-card.scss
+++ b/styleguide/source/assets/scss/02-molecules/hub/_hub-card.scss
@@ -35,7 +35,6 @@
     margin: 0;
     height: 100%;
     display: flex;
-    height: 100%;
 
     .ama__image {
       height: auto;
@@ -54,9 +53,12 @@
   @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
 
     //This targets all hub cards in IE11
-    &__image .ama__image {
-      max-width: 379px;
-      max-height: 400px;
+    &__image {
+      height: auto;
+
+      .ama__image {
+        max-height: 400px;
+      }
     }
     //This targets all hub hero images and prevents them from having a max-height
     &.ama__hub-hero .ama__hub-card__image .ama__image {
